# netdata

.Trash-1000/info/: 0f0e813d-06a9-45a3-bf36-c3ab83483457.trashinfo
collectors/node.d.plugin/: Makefile.am  node.d.conf  powertop.conf  powertop.html
collectors/node.d.plugin/powertop/: Makefile.inc  powertop.node.js
collectors/python.d.plugin/: Makefile.am  python.d.conf
collectors/python.d.plugin/nvidia_smi/: nvidia_smi.chart.py
collectors/python.d.plugin/powertop/: Makefile.inc  README.md  powertop.chart.py
collectors/python.d.plugin/s_tui/: Makefile.inc  README.md  s_tui.chart.py
web/gui/: dashboard_info.js
